--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,13 @@
       "path": "./tsconfig.vitest.json"
     }
   ],
+  // "compilerOptions": {
+  //   "module": "NodeNext"
+  // }
   "compilerOptions": {
-    "module": "NodeNext"
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
